--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -3,16 +3,19 @@
       <img src="img/3dapuntando.png" alt="Illustration" class="login-image">
       <div class="login-form">
           <div class="imagen-log">
-            <img src="img/logo-removebg-preview.png" width="100%" height="100%" alt="">
+            <img src="img/logo-removebg-preview.png" width="100%" height="100%" alt="Logo de comida">
           </div>
-          <h2 class="text-center mb-4">Inicio de sesión</h2>
-          <p class="text-center">¡Bienvenidos a Foofie! Descubre recetas irresistibles y convierte tu cocina en un paraíso de sabores. 🍲✨</p>
+          <h2 class="text-center mb-4">Descubre la receta perfecta para hoy</h2>
+          <p class="text-center">Inicia sesión en Foofie y encuentra tu inspiración culinaria. 🍲✨</p>
           <form (ngSubmit)="login()">
               <div class="mb-3">
                 <input type="email" [(ngModel)]="nombreUsuario" [ngModelOptions]="{standalone:true}" class="campo form-control" placeholder="Email">
               </div>
               <div class="mb-3">
                 <input type="password" [(ngModel)]="contrasena" [ngModelOptions]="{standalone:true}" class="campo form-control" placeholder="Password">
+                <div class="recover-link">
+                    <a href="#" (click)="navigateto('recupercontra')">¿Olvidaste tu contraseña?</a>
+                </div>
               </div>
               <button type="submit" class="campo btn btn-custom">Comenzar</button>
           </form>
