--- a/src/app/pages/rcuenta/rcuenta.component.html
+++ b/src/app/pages/rcuenta/rcuenta.component.html
@@ -5,12 +5,12 @@
       </div>
       <h2 class="text-center mb-3">Recuperar Contraseña</h2>
       <p class="text-center">¿Olvidaste tu contraseña? No te preocupes, ¡te ayudamos a recuperarla!</p>
-      <p class="text-center">Ingresa tu correo electrónico y te enviaremos instrucciones para restablecerla.</p>
+      <p class="text-center">Ingresa tu correo electrónico y te enviaremos un código para restablecerla.</p>
       <form [formGroup]="formCorreo" (ngSubmit)="validarCorreo()">
           <div class="mb-3">
               <input type="email" formControlName="correo" class="campo form-control" placeholder="Correo">
           </div>
-          <button type="submit" class="btn-custom" [disabled]="!formCorreo.valid">Enviar instrucciones</button>
+          <button type="submit" class="btn-custom" [disabled]="!formCorreo.valid">Enviar código</button>
       </form>
       <div class="back-to-login">
           <p>¿Recordaste tu contraseña? <a (click)="navigateTo('login')">Inicia sesión</a></p>
